[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/lab_door_closed_right.png" type="Texture" id=1]
[ext_resource path="res://World/lab_door_locked.png" type="Texture" id=2]
[ext_resource path="res://World/lab_door_closed_left.png" type="Texture" id=3]
[ext_resource path="res://World/LabHangarDoors.gd" type="Script" id=4]
[ext_resource path="res://Music and Sounds/31-Sound-Effect-Whoosh.wav" type="AudioStream" id=5]
[ext_resource path="res://Music and Sounds/Click.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 108.0

[sub_resource type="CircleShape2D" id=2]
radius = 146.003

[node name="LabHangarDoors" type="Node2D"]
script = ExtResource( 4 )

[node name="LeftSide" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="RightSide" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Locked" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0
pitch_scale = 0.8

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.2

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
